--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.MainPage {
+    background-color: white;
+    border: 2px solid black;
+    padding: 2rem;
+    width: 90%; 
+    max-width: 500px; 
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap: 1rem;
+    align-items: center;
+}
+
+label {
+    text-align: left;
+}
+
+select, input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid black;
+}
+
+button {
+    width: auto;
+    margin: 1rem auto;
+    padding: 0.5rem 2rem;
+    border: 1px solid black;
+}
+
+#explanation {
+    border: 1px solid black;
+    min-height: 100px;
+    margin-top: 1rem;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+    .content {
+        grid-template-columns: 1fr;
+    }
 }
