--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 * {
     margin: 0;
@@ -14,22 +13,31 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background: linear-gradient(70deg, #cefcdc 0%, #DBE9B7 35%, #F9B572 100%);
 }
 
 .MainPage {
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(252, 252, 252);
     padding: 2rem;
     width: 90%; 
     max-width: 500px; 
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
 }
 
 h1 {
     text-align: center;
     margin-bottom: 1rem;
+    font-family: Montserrat;
+    font-weight: 500;
+    color: black;
+}
+
+p {
+    font-family: Lato;
 }
 
 .content {
@@ -41,30 +49,59 @@ h1 {
 
 label {
     text-align: left;
+    font-family: Lato;
 }
 
 select, input {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid black;
+    border: none;
+    background-color: whitesmoke;
+    font-family: Lato;
+    border-radius: 4px;
+    transition: 0.3s ease-in-out;
+}
+
+select:hover {
+    box-shadow: 0px 4px 10px gray;
+    transition: 0.3s ease-in-out;
+    transform: scale(1.01);
+}
+
+input:focus-within {
+    box-shadow: 0px 4px 10px gray;
+    border: none;
 }
 
 button {
     width: auto;
     margin: 1rem auto;
     padding: 0.5rem 2rem;
-    border: 1px solid black;
+    border: none;
+    background-color: #F9B572;
+    color: white;
+    font-family: Lato;
+    border-radius: 4px;
+    transition: 0.3s ease-in-out;
+}
+
+button:hover {
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out;
+    box-shadow: 0px 4px 10px #F9B572;
 }
 
 #explanation {
-    border: 1px solid black;
+    border: 1px solid grey;
+    font-family: Lato;
     min-height: 100px;
     margin-top: 1rem;
     width: 100%;
+    border-radius: 4px;
 }
 
 @media (max-width: 600px) {
     .content {
         grid-template-columns: 1fr;
     }
-}
+} 
